--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/elements": "^2.8.1",
     "@react-navigation/material-top-tabs": "^7.4.2",
@@ -19,6 +20,7 @@
     "expo": "~54.0.23",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
+    "react-hook-form": "^7.67.0",
     "react-native": "0.81.5",
     "react-native-pager-view": "6.9.1",
     "react-native-safe-area-context": "~5.6.0",
